Backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: leetcode-backend
  labels:
    app: leetcode-tracker
    tier: backend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: leetcode-tracker
      tier: backend

  template:
    metadata:
      labels:
        app: leetcode-tracker
        tier: backend

    spec:
      containers:
        - name: tracker-app
          image: backend-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
