Backend/k8s/backend_services.yaml
apiVersion: v1
kind: Service

metadata: 
  name: leetcode-backend
spec:
  selector:
    app: leetcode-tracker
    tier: backend
  ports: 
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
