Backend/k8s/postgres-deployment.yaml
apiVersion: v1
kind: Service

metadata:
  name: leetcode-postgres

spec:
  selector:
    app: leetcode-tracker
    tier: database

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
